# identityAgent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.logservice  Dockerfile.registry  Dockerfile.stripeadapter  LICENSE  README.md  SECURITY.md  cloudbuild.stripeadapter.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.well-known/: agent-card.json
docs/: ACCELERATOR_READINESS_CHECKLIST.md  ARCHITECTURE.md  CUSTOM_DOMAIN_EMAIL.md  DEMO_VIDEO_SCRIPT.md  DEPLOY_CLOUD_RUN_PER_CALL.md  GETTING_STARTED.md  GITHUB_PUBLISH.md  GO_TO_MARKET_IDENTITY.md  IDENTITY_REGISTRY_MODEL.md  PAYMENTS_INTEGRATION.md  STRIPE_ADAPTER_SETUP.md  STRIPE_PAYMENT_LINKS.md  TRANSACTION_MODEL.md
legal/: TERMS_TEMPLATE.md
reputation-auditor-site/: README.md  config.js  index.html  pricing.html  privacy.html  site.js  styles.css  terms.html
scripts/: cloudrun_deploy_per_call.sh  cloudrun_deploy_stripe_adapter.sh  cloudrun_deploy_subscription.sh  cloudrun_set_secrets.sh  cloudrun_set_stripe_adapter_secrets.sh  e2e_subscription_smoke.sh  seed_identity_registry.py  seed_transaction_log.py  smoke_audit.py  stripe_ensure_subscription_prices.py  stripe_register_adapter_webhook.py
src/: auditor.py  config.py  dev_api.py  evidence.py  payment_routes.py  payment_store.py  payments.py  tiers.py
src/audit_regimes/: __init__.py  anti_abuse.py  (+3 more)
tests/: test_agent_card.py  test_dev_api.py  test_identity_registry.py  test_payment_ledger.py  test_payments.py  test_scoring.py  test_stripe_adapter.py  test_transaction_log.py
(+14 files in other folders)
